Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4185

Incorrect permission handling when creating existing directories at ICHEC

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • Lustre 2.4.0, Lustre 2.1.4, Lustre 2.5.0, Lustre 2.6.0
    • None
    • 3
    • 11322

      One of our customers is hitting what appears to be LU-1101. They are also running torque, here is the message from the customer:

      We use torque as resource manager and job start fails because of mkdir() returns EPERM. The only workaround we have for this is to not set the tmpdir in torque, which is suboptimal. Other applications might suffer the same bug. Quantum espresso is reported to fail as well (in the lustre bug report) and we have users running it.

      The bug was originally reported in bz 23459:
      https://bugzilla.lustre.org/show_bug.cgi?id=23459

      The patch which appears to be the root cause was added as part of bz 18534:
      https://bugzilla.lustre.org/show_bug.cgi?id=18534

      Thanks.

            bobijam Zhenyu Xu
            rganesan@ddn.com Rajeshwaran Ganesan
            Votes:
            2 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: