lustre/llite/namei.c
@@ -674,8 +674,13 @@ static struct dentry *ll_lookup_nd(struct inode *parent, struct dentry *dentry,
 	       dentry->d_name.len, dentry->d_name.name,
 	       PFID(ll_inode2fid(parent)), parent, flags);
 
-	/* Optimize away (CREATE && !OPEN). Let .create handle the race. */
-	if ((flags & LOOKUP_CREATE) && !(flags & LOOKUP_OPEN))
+	/*
+	 * Optimize away (CREATE && !OPEN). Let .create handle the race.
+	 * but only if we have write permissions there, otherwise we need
+	 * to proceed with lookup. LU-4185
+	 */
+	if ((flags & LOOKUP_CREATE) && !(flags & LOOKUP_OPEN) &&
+	    (inode_permission(parent, MAY_WRITE | MAY_EXEC) == 0))
 		return NULL;
 
 	if (flags & (LOOKUP_PARENT|LOOKUP_OPEN|LOOKUP_CREATE))
@@ -827,9 +832,17 @@ static struct dentry *ll_lookup_nd(struct inode *parent, struct dentry *dentry,
                         it = ll_d2d(dentry)->lld_it;
                         ll_d2d(dentry)->lld_it = NULL;
                 } else {
+			/*
+			 * Optimize away (CREATE && !OPEN). Let .create handle
+			 * the race. But only if we have write permissions
+			 * there, otherwise we need to proceed with lookup.
+			 * LU-4185
+			 */
 			if ((nd->flags & LOOKUP_CREATE) &&
-			    !(nd->flags & LOOKUP_OPEN))
-                                RETURN(NULL);
+			    !(nd->flags & LOOKUP_OPEN) &&
+			    (inode_permission(parent,
+					      MAY_WRITE | MAY_EXEC) == 0))
+				RETURN(NULL);
 
                         it = ll_convert_intent(&nd->intent.open, nd->flags);
                         if (IS_ERR(it))
